[NCITERM-883] Invicti Vulnerability Response.

--- a/software/ncitbrowser/web/pages/deprecated/templates/nciFooter.html
+++ b/software/ncitbrowser/web/pages/deprecated/templates/nciFooter.html
@@ -2,22 +2,22 @@
 <div class="footer">
   <ul>
     <li>
-    <a href="https://www.cancer.gov" target="_blank" alt="National Cancer Institute">NCI Home</a>
+    <a href="https://www.cancer.gov" target="_blank" rel="noopener" alt="National Cancer Institute">NCI Home</a>
     |
     <li>
     <a href="<%= request.getContextPath() %>/pages/contact_us.jsf" alt="NCIt Contact Us">Contact Us</a>
     |</i>
   <li>
-  <a href="https://www.cancer.gov/policies" target="_blank" alt="National Cancer Institute Policies">Policies</a>
+  <a href="https://www.cancer.gov/policies" target="_blank" rel="noopener" alt="National Cancer Institute Policies">Policies</a>
   |</li>
 <li>
-<a href="https://www.cancer.gov/global/web/policies/page3" target="_blank" alt="National Cancer Institute Accessibility">
+<a href="https://www.cancer.gov/global/web/policies/page3" target="_blank" rel="noopener" alt="National Cancer Institute Accessibility">
   Accessibility</a>
 |</li>
 <li>
 <a
     href="https://www.cancer.gov/global/web/policies/page6"
-    target="_blank"
+    target="_blank" rel="noopener"
     alt="National Cancer Institute Freedom of Information Act">
 
   FOIA</a>
@@ -37,22 +37,22 @@
 </p>
 
 <map id="external-footer" name="external-footer">
-  <area shape="rect" coords="0,0,46,34" href="https://www.cancer.gov" target="_blank" alt="National Cancer Institute" />
+  <area shape="rect" coords="0,0,46,34" href="https://www.cancer.gov" target="_blank" rel="noopener" alt="National Cancer Institute" />
   <area
       shape="rect"
       coords="55,1,99,32"
       href="https://www.hhs.gov/"
-      target="_blank"
+      target="_blank" rel="noopener"
       alt="U.S. Health &amp; Human Services"
   />
   <area
       shape="rect"
       coords="103,1,147,31"
       href="https://www.nih.gov/"
-      target="_blank"
+      target="_blank" rel="noopener"
       alt="National Institutes of Health"
   />
-  <area shape="rect" coords="148,1,235,33" href="https://www.usa.gov/" target="_blank" alt="USA.gov" />
+  <area shape="rect" coords="148,1,235,33" href="https://www.usa.gov/" target="_blank" rel="noopener" alt="USA.gov" />
 </map>
 </div>
 <!-- end footer -->
